feat(data): 添加 DDL 生成引擎和相关工具类
- 新增 `IGenerateDdlEngine` 接口和 `DefaultGenerateDdlEngine` 实现类
- 新增 `ITableMetaBuilder` 接口和 `DefaultTableMetaBuilder` 实现类
- 新增 `MysqlJdbcDdlUtils` 工具类，优化生成创建表和修改表的 DDL SQL
- 更新 `TableMeta` 和 `ColumnMeta` 类，初始化字段列表并调整字段类型
- 移除未使用的 `FieldCommentUtils` 类
- 更新 `MybatisAutoConfig` 类，注释掉不再需要的 DDL 创建服务 Bean